fix: Fix Bug on Section1
A bug: overlapping a phone element with buttons

--- a/style.css
+++ b/style.css
@@ -507,6 +507,7 @@ body {
   }
   .phone {
     width: 45%;
+    transform: translateY(0);
   }
   .scroll-icon {
     transform: translateY(9.5rem);
